classDiagram
    class CryptoResult~T~ {
        <<sealed>>
    }

    class CryptoSuccess~T~ {
        +T value
    }

    class CryptoFailure~T~ {
        +CryptoError error
    }

    class CryptoError {
        <<sealed>>
        +String message
        +String? openSslError
        +String? details
    }

    class KeygenError {
        +String algorithm
    }

    class CertificateError {
    }

    class FileSigningError {
    }

    class ValidationError {
    }

    class ChainValidationError {
    }

    class CrlError {
    }

    class X509ExtensionError {
    }

    class OcspError {
    }

    class Asn1Error {
    }

    class AesGcmAuthFailure {
    }

    class CsrError {
    }

    class TimestampError {
    }

    CryptoResult~T~ <|-- CryptoSuccess~T~
    CryptoResult~T~ <|-- CryptoFailure~T~
    CryptoFailure~T~ --> CryptoError : error

    CryptoError <|-- KeygenError
    CryptoError <|-- CertificateError
    CryptoError <|-- FileSigningError
    CryptoError <|-- ValidationError
    CryptoError <|-- ChainValidationError
    CryptoError <|-- CrlError
    CryptoError <|-- X509ExtensionError
    CryptoError <|-- OcspError
    CryptoError <|-- Asn1Error
    CryptoError <|-- AesGcmAuthFailure
    CryptoError <|-- CsrError
    CryptoError <|-- TimestampError
